# grim

./: .gitignore  Cargo.toml  LICENSE  README.md  deps.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml
apps/cli/audio_tool/: Cargo.toml
apps/cli/audio_tool/src/: main.rs
apps/cli/audio_tool/src/apps/: decode.rs  encode.rs  mod.rs
apps/cli/mesh_tool/: Cargo.toml
apps/cli/mesh_tool/src/: main.rs
apps/cli/mesh_tool/src/apps/: milo2gltf.rs  mod.rs  model2group.rs
apps/cli/p9_scene_tool/: Cargo.toml
apps/cli/p9_scene_tool/src/: formatter.rs  main.rs
apps/cli/p9_scene_tool/src/apps/: milo2midi.rs  mod.rs  newproject.rs  project2milo.rs
apps/cli/p9_scene_tool/src/helpers/: mod.rs
apps/cli/p9_scene_tool/src/models/: gdrb.rs  mod.rs  serialization.rs
apps/cli/scene_tool/: Cargo.toml
apps/cli/scene_tool/src/: main.rs
apps/cli/scene_tool/src/apps/: dir2milo.rs  milo2dir.rs  milo2kr.rs  mod.rs  savemilo.rs
apps/ui/preview_ui/: Cargo.toml
apps/ui/preview_ui/src/: events.rs  main.rs  plugins.rs  settings.rs  state.rs
apps/ui/preview_ui/src/gui/: ark.rs  icons.rs  mod.rs
apps/ui/preview_ui/src/render/: loader.rs  milo_entry.rs  mod.rs
core/grim/: Cargo.toml  grim.pyi
core/grim/benches/: texture_benchmark.rs
core/grim/src/: lib.rs  system.rs
core/grim/src/ark/: ark.rs  errors.rs  io.rs  mod.rs
core/grim/src/audio/: adpcm.rs  mod.rs  str.rs  vgs.rs  wav.rs  xma.rs
core/grim/src/dta/: io.rs  mod.rs  parser.rs
core/grim/src/io/: archive.rs  compression.rs  crypt.rs  file.rs  mod.rs  stream.rs
core/grim/src/midi/: mod.rs  reader.rs
core/grim/src/model/: export.rs  gltf.rs  mod.rs  tex_path.rs
core/grim/src/scene/: dir.rs  io.rs  meta.rs  milo.rs  mod.rs  object.rs  object_dir.rs
core/grim/src/scene/anim/: io.rs  mod.rs
core/grim/src/scene/band_placer/: io.rs  mod.rs
core/grim/src/scene/cam/: io.rs  mod.rs
core/grim/src/scene/char_bones_samples/: io.rs  mod.rs
core/grim/src/scene/char_clip/: io.rs  mod.rs
core/grim/src/scene/char_clip_samples/: io.rs  mod.rs
core/grim/src/scene/char_hair/: io.rs  mod.rs
core/grim/src/scene/char_lip_sync/: io.rs  mod.rs
core/grim/src/scene/color_palette/: io.rs  mod.rs
core/grim/src/scene/cube_tex/: io.rs  mod.rs
core/grim/src/scene/draw/: io.rs
core/grim/src/scene/group/: io.rs  mod.rs
core/grim/src/scene/mat/: io.rs
core/grim/src/scene/mesh/: io.rs  mod.rs
core/grim/src/scene/mesh_anim/: io.rs  mod.rs
core/grim/src/scene/morph/: io.rs  mod.rs
core/grim/src/scene/object_dir/: io.rs  mod.rs
core/grim/src/scene/p9_song_pref/: io.rs
core/grim/src/scene/poll/: mod.rs
core/grim/src/scene/prop_anim/: io.rs  mod.rs
core/grim/src/scene/synth_sample/: io.rs  mod.rs
core/grim/src/scene/tex/: io.rs  mod.rs
core/grim/src/scene/trans/: io.rs  mod.rs
core/grim/src/scene/trans_anim/: io.rs  mod.rs
core/grim/src/texture/: bitmap.rs  common.rs  dxt.rs  io.rs
core/grim_gltf/: Cargo.toml
core/grim_gltf/src/: lib.rs
core/grim_macros/: Cargo.toml
core/grim_macros/src/: common.rs  lib.rs
core/grim_macros/src/scene/: mesh.rs  milo_object.rs  mod.rs  object_dir.rs  poll.rs
core/grim_midi/: Cargo.toml
core/grim_midi/src/: lib.rs
core/grim_traits/: Cargo.toml
core/grim_traits/src/scene/: anim.rs  char_clip.rs  common.rs  draw.rs  group.rs  mat.rs  mesh.rs  milo_object_dir.rs  mod.rs  object.rs  object_dir.rs  poll.rs  trans.rs
examples/: read_ark.py  test.py
grim/: Cargo.toml
grim/benches/: texture_benchmark.rs
grim/src/: lib.rs  system.rs
grim/src/ark/: ark.rs  errors.rs  io.rs
grim/src/dta/: errors.rs  io.rs  mod.rs  parser.rs
grim/src/io/: archive.rs  compression.rs  file.rs  mod.rs  stream.rs
grim/src/midi/: io.rs  mod.rs  reader.rs
grim/src/model/: anim.rs  draw.rs  gltf.rs  group.rs  mat.rs  mesh.rs  mod.rs  tex.rs  trans.rs
grim/src/scene/: dir.rs  io.rs  meta.rs  milo.rs  mod.rs  object.rs  object_dir.rs
grim/src/scene/anim/: io.rs  mod.rs
grim/src/scene/char_bones_samples/: mod.rs
grim/src/scene/draw/: io.rs  mod.rs
grim/src/scene/group/: io.rs  mod.rs
grim/src/scene/mat/: io.rs  mod.rs
grim/src/scene/mesh/: io.rs  mod.rs
grim/src/scene/p9_song_pref/: io.rs  mod.rs
grim/src/scene/prop_anim/: io.rs  mod.rs
grim/src/scene/tex/: io.rs  mod.rs
grim/src/scene/trans/: io.rs  mod.rs
grim/src/texture/: common.rs  dxt.rs  io.rs  mod.rs  tpl.rs
grim_macros/: Cargo.toml
grim_macros/src/: common.rs  lib.rs
grim_macros/src/scene/: anim.rs  draw.rs  group.rs  mesh.rs  mod.rs  trans.rs
grim_traits/: Cargo.toml
grim_traits/src/: common.rs  lib.rs
grim_traits/src/scene/: anim.rs  common.rs  draw.rs  group.rs  mat.rs  mesh.rs  milo_object.rs  mod.rs  poll.rs  trans.rs
mesh_tool/: Cargo.toml
mesh_tool/src/apps/: mod.rs  model2group.rs
p9_scene_tool/: Cargo.toml
p9_scene_tool/src/: main.rs  models.rs
p9_scene_tool/src/apps/: milo2midi.rs  mod.rs  newproject.rs  project2milo.rs
p9_scene_tool/src/models/: gdrb.rs  mod.rs  tbrb.rs
preview_ui/: Cargo.toml  tree.txt
preview_ui/src/: events.rs  main.rs  plugins.rs  settings.rs  state.rs
preview_ui/src/gui/: ark.rs  milo.rs  mod.rs  toolbar.rs
preview_ui/src/render/: loader.rs  milo_entry.rs  mod.rs
scene_tool/: Cargo.toml
scene_tool/src/: lib.rs  main.rs
scene_tool/src/apps/: dir2milo.rs  milo2dir.rs  mod.rs  savemilo.rs
scripts/: README.md  read_ark.py
src/: main.rs
src/grim/: milo.rs  mod.rs
src/grim/io/: archive.rs  compression.rs  mod.rs  stream.rs
src/grim/scene/: mod.rs  object.rs  object_dir.rs
utils/anim_preview/: Cargo.toml
utils/anim_preview/src/: main.rs
utils/lipsync_preview/: Cargo.toml
utils/lipsync_preview/src/: app.rs  main.rs
utils/milo_export/: Cargo.toml
utils/milo_export/src/: helpers.rs  main.rs
utils/shared/: Cargo.toml
utils/shared/src/: lib.rs
