[workspace]
members = [
    "apps/cli/*",
    #"apps/ui/*",
    "core/*",
    "utils/*"
]
default-members = [
    "apps/cli/*",
    #"apps/ui/*",
    "core/*"
]
resolver = "2" # Super duper important for bevy!

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4.8", features = ["derive"] }
gltf = { version = "=1.3.0", default-features = false, features = [ "import", "names", "utils" ] }
gltf-json = { version = "=1.3.0", features = [ "names" ] }
grim = { path = "core/grim" }
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"
thiserror = "1.0.50"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # Optimize for size
strip = true
