[workspace]
members = [
    "apps/cli/*",
    #"apps/ui/*",
    "core/*",
    "utils/*"
]
default-members = [
    "apps/cli/*",
    #"apps/ui/*",
    "core/*"
]
resolver = "2" # Super duper important for bevy!

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.1", features = ["derive"] }
gltf = { version = "=1.3.0", default-features = false, features = [ "import", "names", "utils" ] }
gltf-json = { version = "=1.3.0", features = [ "names" ] }
grim = { path = "core/grim" }
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
# simplelog = "0.12.1"
simplelog = { git = "https://github.com/Drakulix/simplelog.rs", rev = "4ef071d" }
thiserror = "1.0.57"

[workspace.lints.rust]
dead_code = "allow"
deprecated = "allow"
unused_assignments = "allow"
unused_imports = "allow"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # Optimize for size
strip = true
