[package]
name = "grim"
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[dependencies]
flate2 = "1.0.23"
gltf = { version = "1.0.0", optional = true, features = [ "import", "names" ] }
grim_macros = { path = "../grim_macros" }
grim_traits = { path = "../grim_traits" }
half = "1.8.2"
image = { version = "0.24.1", default-features = false, features = [ "dxt", "jpeg", "png" ] }
itertools = "0.10.3"
lazy_static = "1.4.0"
midly = { version = "0.5.2", optional = true }
nalgebra = { version = "0.30.1", optional = true }
rayon = "1.5"
regex = { version = "1.5.5", default-features = false, features = [ "std" ] }
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3"
rstest = "0.12"

[features]
midi = [ "midly" ]
model = [ "gltf", "nalgebra" ]

[[bench]]
name = "texture_benchmark"
harness = false

[lib]
bench = false
