[package]
name = "grim"
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[dependencies]
flate2 = "1.0.24"
gltf = { version = "1.0.0", optional = true, features = [ "import", "names" ] }
grim_macros = { path = "../grim_macros" }
grim_traits = { path = "../grim_traits" }
half = { version = "2.1.0", default-features = false }
image = { version = "0.24.3", default-features = false, features = [ "dxt", "jpeg", "png" ] }
itertools = "0.10.3"
lazy_static = "1.4.0"
midly = { version = "0.5.2", optional = true }
nalgebra = { version = "0.31.0", optional = true }
rayon = "1.5.3"
regex = { version = "1.6.0", default-features = false, features = [ "std" ] }
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.3.6"
rstest = "0.15.0"

[features]
midi = [ "midly" ]
model = [ "gltf", "nalgebra" ]

[[bench]]
name = "texture_benchmark"
harness = false

[lib]
bench = false
