[package]
name = "grim_macros"
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
grim_traits = { path = "../grim_traits" }
lazy_static = "1.4.0"
proc-macro2 = "1.0.37"
quote = "1.0"
syn = { version = "1.0", default-features = false, features = ["derive"] }
