[package]
name = "grim_macros"
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
grim_traits = { path = "../grim_traits" }
lazy_static = "1.4.0"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.96", default-features = false, features = ["derive"] }
