[package]
name = "preview_ui"
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[dependencies]
bevy = { version = "0.6", default-features = false, features = [ "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_winit" ] }
bevy_egui = "0.10.2"
bevy_fly_camera = "0.8.0"
bevy-remote-devtools-plugin = { version = "0.2", optional = true }
console_error_panic_hook = "0.1.7"
grim = { path = "../grim" }
itertools = "0.10.3"
# native-dialog = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.75"
thiserror = "1.0.30"

[features]
dev = ["bevy-remote-devtools-plugin"]