[package]
name = "preview_ui"
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[dependencies]
bevy = { version = "0.8.0", default-features = false, features = [ "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_winit", "x11" ] }
bevy_egui = { version = "0.15.0", features = [ "immutable_ctx" ] }
bevy_fly_camera = { git = "https://github.com/PikminGuts92/bevy_fly_camera", branch = "bevy-0.8" }
#bevy_infinite_grid = "0.4.0"
console_error_panic_hook = "0.1.7"
grim = { path = "../grim" }
itertools = "0.10.3"
# native-dialog = "0.6.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
