[package]
name = "grim"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.21.7"
bitstream-io = { version = "2.2.0", optional = true }
ffmpeg-next = { version = "6.1.1", optional = true }
flate2 = "1.0.28"
fon = { version = "0.6.0", optional = true }
gltf = { workspace = true, optional = true }
gltf-json = { workspace = true, optional = true }
grim_gltf = { path = "../grim_gltf", optional = true }
grim_macros = { path = "../grim_macros" }
grim_traits = { path = "../grim_traits" }
half = { version = "2.3.1", default-features = false }
image = { version = "0.24.8", default-features = false, features = [ "dxt", "png" ] }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
midly = { version = "0.5.3", optional = true }
nalgebra = { version = "0.32.3", optional = true }
nom = "7.1.3"
# pyo3 = { version = "0.17.3", optional = true, features = [ "extension-module" ] }
pyo3 = { git = "https://github.com/PyO3/pyo3", branch = "cfg-feature-pyo3", optional = true, features = [ "extension-module" ] }
rayon = "1.8.0"
regex = { version = "1.10.2", default-features = false, features = [ "std" ] }
serde = { optional = true, workspace = true }
thiserror = { workspace = true }
wav = { version = "1.0.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"

[features]
audio = [ "bitstream-io", "fon", "wav" ]
audio_experimental = [ "ffmpeg-next" ]
midi = [ "midly" ]
model = [ "gltf", "gltf-json", "grim_gltf", "nalgebra", "serde" ]
python = [ "pyo3" ]

[[bench]]
name = "texture_benchmark"
harness = false

[lib]
bench = false
crate-type = [ "lib", "cdylib" ]
