[package]
name = "grim_macros"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
grim_traits = { path = "../grim_traits" }
lazy_static = { workspace = true }
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.48", default-features = false, features = [ "clone-impls", "derive", "parsing", "printing", "proc-macro" ] }
