[package]
name = "lipsync_preview"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
grim = { workspace = true, features = [ "audio" ] }
eframe = "0.26.2"
egui_plot = "0.26.2"
keyframe = "1.1.1"
nalgebra = "0.32.4"
#rerun = "0.2.0"
shared = { path = "../shared" }

[lints]
workspace = true
