[package]
name = "p9_scene_tool"
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[dependencies]
build-time = "0.1.2"
clap = { version = "3.2.22", features = ["derive"] }
const_format = "0.2.26"
grim = { path = "../../../core/grim", features = [ "midi" ] }
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
simplelog = "0.12.0"
thiserror = "1.0.35"

[dev-dependencies]
criterion = "0.4.0"
rstest = "0.15.0"
