[package]
name = "preview_ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [ "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_winit", "x11" ] }
bevy_egui = { version = "0.19.0", features = [ "immutable_ctx" ] }
bevy_fly_camera = { git = "https://github.com/PikminGuts92/bevy_fly_camera", branch = "bevy-0.9" }
bevy_infinite_grid = "0.6.0"
grim = { workspace = true }
itertools = { workspace = true }
# native-dialog = "0.6.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
